@@ -1,5 +1,7 @@
 Revision history for Web::ComposableRequest
 
+          - Adds collect_status_messages
+
 0.16.1    2016-10-05 18:10:19
           - Adds reset session
           - Added broken smoker
